# SlimeBot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  README.zh-CN.md  docker-compose.yml  go.mod  go.sum  package-lock.json  package.json  requirements.txt
backend/: .env.example  go.mod  go.sum  system_prompt.md
backend/migrations/: 000001_init.up.sql
backend/prompts/: system_prompt.md
backend/scripts/: onnx_embed.py
cli/: cli.cjs  package-lock.json  package.json  tsup.config.ts
cli/native/color-diff/: Cargo.toml
cli/native/color-diff/src/: lib.rs
cli/src/: app.test.ts  app.tsx  index.tsx  reducer.test.ts  reducer.ts  types.ts
cmd/cli/: main.go
cmd/server/: main.go  main_test.go
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  i18n.ts  main.ts  router.ts  style.css
frontend/tests/: chatMessages.test.ts  chatSocketContextUsage.test.ts  chatStoreReducers.test.ts  contextSize.test.ts  dialogMask.test.ts  mobileOverflowStyles.test.ts  replyBatchBuilder.test.ts  runtimeTodo.test.ts  thinkingPreview.test.ts  toolApprovalBatch.test.ts  toolApprovalFusion.test.ts  toolCallDisplay.test.ts  toolDisplay.test.ts
internal/app/: app.go  bootstrap.go  bootstrap_cli_headless_test.go  bootstrap_mode_test.go  core.go  memory_vectorization.go
migrations/: 000001_init.down.sql  000001_init.up.sql  000002_perf_indexes.down.sql  000002_perf_indexes.up.sql
prompts/: embed.go  embed_test.go  system_prompt.md
scripts/: onnx_embed_lib.py  onnx_embed_server.py
(+496 files in other folders)
