[package]
name = "slimebot_color_diff_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
unicode-width = "0.1"

[build-dependencies]
napi-build = "2"
